--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Invitacion Boda | Brian y Kari</title>
     <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,6 +14,10 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Arizonia&family=Playwrite+VN:wght@100..400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arizonia&family=Parisienne&family=Playwrite+VN:wght@100..400&display=swap"
       rel="stylesheet"
     />
   </head>
